[package]
name = "cockpit-auth-ssh-key"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
env_logger = "0.10.0"
log = "0.4.18"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
